--- a/assets/styles/fields/index.css
+++ b/assets/styles/fields/index.css
@@ -54,19 +54,47 @@ select {
   background: url(../../icons/arrow-down-01.svg) no-repeat calc(100% - 1.6rem);
 }
 
-.address .flex{
+.address .flex {
   gap: 2rem;
 }
 
-.input-wrapper:has([disabled]){
-  opacity: .5;
+.input-wrapper:has([disabled]) {
+  opacity: 0.5;
 }
 
-input{
-  &[disabled]{
+input {
+  &[disabled] {
     background-color: var(--surface-disabled);
     border: 1px solid var(--stroke-default);
     color: var(--text-primary);
   }
 
+  &:invalid {
+    border: 0.2rem solid var(--semantic-error);
+  }
+
+  & + small {
+    font: var(--text-sm);
+    color: #78716c;
+    display: inline-block;
+
+    margin-top: 0.4rem;
+  }
+
+  &[required] + .error {
+    display: flex;
+
+    align-items: center;
+    gap: 0.4rem;
+    font: var(--text-sm);
+    color: var(--semantic-error);
+
+    margin-top: 0.4rem;
+  }
+
+  &:not(:focus) + .error,
+  &:valid + .error {
+    display: none;
+    border: 0.2rem solid var(--stroke-highlight);
+  }
 }
